# INF2004-T84

./: CMakeLists.txt  blinky.c
distance/: CMakeLists.txt
distance/readCM/: CMakeLists.txt  readCM.c
distance/ultrasonic/: ultrasonic.c
irline/: CMakeLists.txt  irline.c  irline.h
magnometer/: CMakeLists.txt  magnometer.c
motor/: CMakeLists.txt  motor.c  motor.h
wifi/: CMakeLists.txt  Server.c  lwipopts.h
